--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     }
   },
   "dependencies": {
+    "mdx-bundler": "3.1.0",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
