--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     }
   },
   "dependencies": {
+    "clsx": "^1.1.1",
     "mdx-bundler": "3.1.0",
     "next": "10.2.0",
     "react": "17.0.2",
