--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "dependencies": {
     "clsx": "^1.1.1",
-    "mdx-bundler": "3.1.0",
     "next": "10.2.0",
+    "next-mdx-enhanced": "~5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
