--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     }
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.0",
     "clsx": "^1.1.1",
     "next": "10.2.0",
     "next-mdx-enhanced": "~5.0.0",
