--- a/package.json
+++ b/package.json
@@ -39,10 +39,14 @@
     "eslint-plugin-react": "7.23.2",
     "eslint-plugin-react-hooks": "4.2.0",
     "husky": "4.3.8",
+    "mdx-prism": "0.3.3",
     "postcss": "8.2.13",
     "postcss-custom-properties": "11.0.0",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-nested": "5.0.5",
+    "rehype": "11.0.0",
+    "rehype-autolink-headings": "5.0.1",
+    "rehype-slug": "4.0.1",
     "tailwindcss": "2.1.2",
     "typescript": "4.2.4"
   }
