--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "rehype": "11.0.0",
     "rehype-autolink-headings": "5.0.1",
     "rehype-slug": "4.0.1",
+    "rehype-toc": "^3.0.2",
     "tailwindcss": "2.1.2",
     "typescript": "4.2.4"
   }
